crates/uitest/fixtures/ty_check/error_attr_empty_form.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/error_attr_empty_form.fe
---
error[16-0002]: invalid `#[error]` attribute form
  ┌─ error_attr_empty_form.fe:1:1
  │
1 │ #[error()]
  │ ^^^^^^^^^^ expected `#[error]` without arguments
  │
  = remove arguments and use `#[error]`
